<resources>
    <string name="app_name" translatable="false">فیلترشکن</string>
    <string name="project">Project</string>
    <string name="github">Source code</string>
    <string name="app_version">Version</string>
    <string name="version_x">Version (%s)</string>
    <string name="logcat">Export debug information</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_group">Group</string>
    <string name="menu_about">About</string>
    <string name="theme">Theme</string>
    <string name="group_default">instagram : mobile.tina</string>
    <string name="quick_toggle">Toggle</string>
    <string name="menu_traffic">Traffic</string>
    <string name="group_name">Group name</string>
    <string name="group_update">Update</string>
    <string name="group_subscription_link">Subscription link</string>
    <string name="group_create">Create group</string>
    <string name="group_edit">Edit group</string>
    <string name="group_status_empty">Empty group</string>
    <string name="group_status_empty_subscription">Not updated yet</string>
    <plurals name="group_status_proxies">
        <item quantity="one">%d profile</item>
        <item quantity="other">%d profiles</item>
    </plurals>
    <plurals name="group_status_proxies_subscription">
        <item quantity="one">%d profile | Last update: %s</item>
        <item quantity="other">%d profiles | Last update: %s</item>
    </plurals>
    <string name="group_no_difference">%s: No change</string>
    <plurals name="group_updated">
        <item quantity="one">%s: Updated %d profile</item>
        <item quantity="other">%s: Updated %d profiles</item>
    </plurals>
    <string name="group_diff">Diff (%s)</string>
    <string name="group_delete_confirm_prompt">Are you sure you want to remove this group?</string>
    <string name="group_added">اضافه شد: \n%s</string>
    <string name="group_changed">بروزرسانی شد: \n%s</string>
    <string name="group_deleted">حذف شد: \n%s</string>
    <string name="group_duplicate">تکراری: \n%s</string>
    <string name="service_mode">Service mode</string>
    <string name="service_mode_proxy">Proxy only</string>
    <string name="service_mode_vpn">VPN</string>
    <string name="port_proxy">SOCKS5 proxy port</string>
    <string name="port_http">HTTP proxy port</string>
    <string name="port_transproxy">Transparent proxy port</string>
    <string name="cag_route">Route settings</string>
    <string name="allow_access">Allow connections from LAN</string>
    <string name="allow_access_sum">Bind inbounds to 0.0.0.0</string>
    <string name="inbound_settings">Inbound settings</string>
    <string name="general_settings">App settings</string>
    <string name="require_http">Enable HTTP inbound</string>
    <string name="cag_ws">WebSocket settings</string>
    <string name="ws_max_early_data">Max early data</string>
    <string name="ws_browser_forwarding">Browser forwarding</string>
    <string name="ws_browser_forwarding_sum">Forward WebSocket through browser</string>
    <string name="speed_interval">Speed notification update interval</string>
    <string name="cag_misc">Misc settings</string>
    <string name="show_direct_speed">Show direct speed</string>
    <string name="show_direct_speed_sum">Show direct traffic speed in notification as well</string>
    <string name="security_settings">Security settings</string>
    <string name="allow_insecure">Skip certificate verification</string>
    <string name="allow_insecure_sum">Enabling this option without deploying other security measures leads to the success of man-in-the-middle attacks. Do NOT enable unless you know what you are doing.</string>
    <string name="traffic" translatable="false">%1$s↑ %2$s↓</string>
    <string name="speed_detail">Proxy: %1$s↑ %2$s↓
\nDirect: %3$s↑ %4$s↓</string>
    <string name="speed">%s/s</string>
    <string name="connection_test_testing">Testing…</string>
    <string name="connection_test_available">Success: HTTPS handshake took %d ms</string>
    <string name="connection_test_available_http">Success: HTTP handshake took %d ms</string>
    <string name="connection_test_error">Failed: %s</string>
    <string name="cag_dns">DNS settings</string>
    <string name="remote_dns">Remote DNS</string>
    <string name="direct_dns">Direct DNS</string>
    <string name="enable_dns_routing">Enable DNS routing</string>
    <string name="dns_routing_message">Resolve domains in bypass routes with direct DNS</string>
    <string name="enable_fakedns">Enable fake DNS</string>
    <string name="fakedns_message">May cause other applications to need to be restarted to reconnect to the network after the proxy is disconnected</string>
    <string name="hijack_dns">Hijack DNS</string>
    <string name="hijack_dns_message">Hijack DNS queries that are not sent to TUN DNS address with DNS sniffer</string>
    <string name="dns_hosts">Domain rewriting</string>
    <string name="port_local_dns">Local DNS port</string>
    <string name="require_transproxy">Enable transparent proxy inbound</string>
    <string name="transproxy_mode">Transparent proxy mode</string>
    <string name="connection_test_url">Connection test URL</string>
    <string name="probe_url">Custom test URL</string>
    <string name="profile_name">Profile name</string>
    <string name="server_address">Server</string>
    <string name="server_port">Server port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enc_method">Encryption method</string>
    <string name="protocol">Protocol</string>
    <string name="protocol_param">Protocol parameters</string>
    <string name="obfs">Obfs</string>
    <string name="obfs_param">Obfs parameters</string>
    <string name="uuid">User ID</string>
    <string name="alter_id">Alter ID</string>
    <string name="security">Transport layer security</string>
    <string name="network">Network</string>
    <string name="flow">Flow</string>
    <string name="header_type">Obfuscation header type</string>
    <string name="ws_host">WebSocket host</string>
    <string name="ws_path">WebSocket path</string>
    <string name="http_host">HTTP host</string>
    <string name="http_path">HTTP path</string>
    <string name="quic_security">QUIC Security</string>
    <string name="quic_key">QUIC key</string>
    <string name="kcp_seed">mKCP seed</string>
    <string name="grpc_service_name">gRPC service name</string>
    <string name="url">URL</string>
    <string name="sni">SNI</string>
    <string name="alpn">ALPN</string>
    <string name="certificates">Certificate</string>
    <string name="pinned_peer_certificate_chain_sha256">Pinned certificate chain SHA-256</string>
    <string name="early_data_header_name">Early data header name</string>
    <string name="extra_headers">Extra headers</string>
    <string name="config_type">Config type</string>
    <string name="edit_config">Edit Config</string>
    <string name="ipv6">IPv6 route</string>
    <string name="metered">Metered Hint</string>
    <string name="metered_summary">Hint system to treat VPN as metered</string>
    <string name="menu_route">Route</string>
    <string name="route_add">Create route</string>
    <string name="action_shadowsocks" translatable="false">Shadowsocks</string>
    <string name="action_vmess" translatable="false">VMess</string>
    <string name="action_vless" translatable="false">VLESS</string>
    <string name="action_trojan" translatable="false">Trojan</string>
    <string name="custom_config">Custom config</string>
    <string name="action_import">Import from clipboard</string>
    <string name="action_import_file">Import from file</string>
    <string name="add_profile_methods_manual_settings">Manual settings</string>
    <string name="proxy_cat">Server settings</string>
    <string name="connection_test">Connection test</string>
    <string name="connection_test_clear_results">Clear test results</string>
    <string name="group_order">Sort</string>
    <string name="group_order_origin">By original order</string>
    <string name="group_order_by_name">Alphabetically</string>
    <string name="group_order_by_delay">By latency</string>
    <string name="ssh_private_key">Private key</string>
    <string name="wireguard_local_address">Local address</string>
    <string name="wireguard_allowed_ips">Allowed IPs</string>
    <string name="wireguard_public_key">Peer public key</string>
    <string name="wireguard_psk">Peer pre-shared key</string>
    <string name="action_amneziawg" translatable="false">AmneziaWG</string>
    <string name="amneziawg_10">AmneziaWG 1.0 obfuscation</string>
    <string name="amneziawg_15">AmneziaWG 1.5 obfuscation</string>
    <string name="amneziawg_20">AmneziaWG 2.0 obfuscation</string>
    <string name="amneziawg_30">AmneziaWG 3.0</string>
    <string name="amneziawg_31">AmneziaWG 3.1</string>
    <string name="amneziawg_jc">Jc (junk packet count)</string>
    <string name="amneziawg_jmin">Jmin (junk min size, bytes)</string>
    <string name="amneziawg_jmax">Jmax (junk max size, bytes)</string>
    <string name="amneziawg_s1">S1 (init packet junk size)</string>
    <string name="amneziawg_s2">S2 (response junk size)</string>
    <string name="amneziawg_s3">S3 (cookie packet junk size)</string>
    <string name="amneziawg_s4">S4 (data packet junk size)</string>
    <string name="amneziawg_h1">H1 (header obfuscation value or range)</string>
    <string name="amneziawg_h2">H2 (header obfuscation value or range)</string>
    <string name="amneziawg_h3">H3 (header obfuscation value or range)</string>
    <string name="amneziawg_h4">H4 (header obfuscation value or range)</string>
    <string name="amneziawg_i1">I1 (obfuscation chain)</string>
    <string name="amneziawg_i2">I2 (obfuscation chain)</string>
    <string name="amneziawg_i3">I3 (obfuscation chain)</string>
    <string name="amneziawg_i4">I4 (obfuscation chain)</string>
    <string name="amneziawg_i5">I5 (obfuscation chain)</string>
    <string name="amneziawg_header_protection_key">Header protection key</string>
    <string name="amneziawg_content_padding">Content padding addition (value or range)</string>
    <string name="amneziawg_rekey_after_time">Rekey after time, seconds (value or range)</string>
    <string name="amneziawg_rekey_timeout">Rekey timeout, seconds (value or range)</string>
    <string name="amneziawg_reject_after_time">Reject after time, seconds (value or range)</string>
    <string name="amneziawg_keepalive_timeout">Keepalive timeout, seconds (value or range)</string>
    <string name="amneziawg_max_handshake_attempts">Maximum handshake attempts (value or range)</string>
    <string name="amneziawg_randomize_packet_trailers">Randomize packet trailers</string>
    <string name="amneziawg_disable_cookie_replies">Disable cookie replies</string>
    <string name="mtu">MTU</string>
    <string name="wireguard_reserved">Reserved</string>
    <string name="update_subscription">Update subscription</string>
    <string name="ech_config">ECH Config</string>
    <string name="wireguard_keepalive_interval">Persistent keepalive (s)</string>
    <string name="pinned_peer_certificate_public_key_sha256">Pinned certificate public key SHA-256</string>
    <string name="pinned_peer_certificate_sha256">Pinned certificate SHA-256</string>
    <string name="pinned_peer_certificate_sha256_base64_dialog_message">Use with "skip certificate verification" if the certificate itself is untrusted or invalid. One per line in Base64 encoding.</string>
    <string name="pinned_peer_certificate_sha256_hex_dialog_message">Use with "skip certificate verification" if the certificate itself is untrusted or invalid. One per line in hex encoding.</string>
    <string name="mtls_certificate">mTLS certificate</string>
    <string name="mtls_certificate_private_key">mTLS certificate private key</string>
</resources>