<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_import_clipboard" android:title="@string/action_import" />
    <item android:id="@+id/action_import_file" android:title="@string/action_import_file" />
    <item android:title="@string/add_profile_methods_manual_settings">
        <menu>
            <item android:id="@+id/action_new_vless" android:title="@string/action_vless" />
            <item android:id="@+id/action_new_vmess" android:title="@string/action_vmess" />
            <item android:id="@+id/action_new_trojan" android:title="@string/action_trojan" />
            <item android:id="@+id/action_new_ss" android:title="@string/action_shadowsocks" />
            <item android:id="@+id/action_new_amneziawg" android:title="@string/action_amneziawg" />
            <item android:id="@+id/action_new_config" android:title="@string/custom_config" />
        </menu>
    </item>
</menu>
