<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_update_subscription" android:title="@string/update_subscription" />
    <item android:id="@+id/action_connection_url_test" android:title="@string/connection_test" />
    <item android:title="@string/group_order">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/action_order_by_delay" android:title="@string/group_order_by_delay" android:checked="true" />
                <item android:id="@+id/action_order_by_name" android:title="@string/group_order_by_name" />
                <item android:id="@+id/action_order_origin" android:title="@string/group_order_origin" />
            </group>
        </menu>
    </item>
    <item android:id="@+id/action_connection_test_clear_results" android:title="@string/connection_test_clear_results" />
</menu>
