<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">

        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_person_24"
            app:key="serverUserId"
            app:title="@string/uuid"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_settings_password"
            app:key="serverPassword"
            app:title="@string/password"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_action_copyright"
            app:key="serverSNI"
            app:title="@string/sni"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            app:entries="@array/juicity_congestion_control_value"
            app:entryValues="@array/juicity_congestion_control_value"
            app:icon="@drawable/baseline_widgets_24"
            app:key="serverJuicityCongestionControl"
            app:title="@string/juicity_congestion_control"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_notification_enhanced_encryption"
            app:key="serverAllowInsecure"
            app:summary="@string/allow_insecure_sum"
            app:title="@string/allow_insecure" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_vpn_key_24"
            app:key="serverCertificates"
            app:title="@string/certificates"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogMessage="@string/pinned_peer_certificate_sha256_base64_dialog_message"
            app:icon="@drawable/ic_baseline_push_pin_24"
            app:key="serverPinnedCertificateChain"
            app:title="@string/pinned_peer_certificate_chain_sha256"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/core_settings"
        app:summary="@string/core_settings_sum">
        <EditTextPreference
            app:dialogMessage="@string/pinned_peer_certificate_sha256_hex_dialog_message"
            app:icon="@drawable/ic_baseline_push_pin_24"
            app:key="serverPinnedCertificate"
            app:title="@string/pinned_peer_certificate_sha256"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogMessage="@string/pinned_peer_certificate_sha256_base64_dialog_message"
            app:icon="@drawable/ic_baseline_push_pin_24"
            app:key="serverPinnedCertificatePublicKey"
            app:title="@string/pinned_peer_certificate_public_key_sha256"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_action_lock"
            app:key="serverMtlsCertificate"
            app:title="@string/mtls_certificate"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_vpn_key_24"
            app:key="serverMtlsCertificatePrivateKey"
            app:title="@string/mtls_certificate_private_key"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_security_24"
            app:key="serverEchConfig"
            app:title="@string/ech_config"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>
